<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="20dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:text="@string/delete_text"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/question_delete_confirmation"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:id="@+id/positive_negative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="visible">

        <Button
            android:id="@+id/dialog_negative_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/no_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/dialog_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/selector_survey_polling_item_red_button"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/yes_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@drawable/selector_survey_polling_item_red_button_text_color" />
    </RelativeLayout>

    <Button
        android:id="@+id/dialog_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/selector_survey_polling_item_red_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/done_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@drawable/selector_survey_polling_item_red_button_text_color" />
</LinearLayout>