<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@android:color/white">

    <!-- Toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#F4F4F4">

        <ImageButton
            android:id="@+id/back_image_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:scaleType="center"
            android:src="@drawable/left_arrow"
            android:tint="#4D4E4B"
            android:onClick="onBackButtonClicked" />

        <CustomClass.RobotoBoldTextView
            android:id="@+id/header_title_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/survey_thank_you_header_title"
            android:textAllCaps="true"
            android:textColor="#7A7A7A"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CustomClass.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:text="@string/thank_you_text"
                android:textStyle="bold"
                android:textSize="24sp" />

            <CustomClass.RobotoRegularTextView
                android:id="@+id/top_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/thank_you_survey_text"
                android:textSize="16sp"/>

            <CustomClass.RobotoRegularTextView
                android:id="@+id/bottom_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/you_have_received_text"
                android:textSize="16sp"/>


            <CustomClass.RobotoRegularTextView
                android:id="@+id/point_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plus_x_pts_text"
                android:textColor="#67C400"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_survey_polling_item_red_button"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/done_text"
                android:textSize="16sp"
                android:textColor="@drawable/selector_survey_polling_item_red_button_text_color"
                android:textStyle="bold"
                android:onClick="onDoneButtonClicked" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shape_shadow_bottom"
            android:alpha="0.3"/>
    </RelativeLayout>

</LinearLayout>