<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preview_item_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:background="@drawable/layerlist_survey_polling_question_layout">

    <CustomClass.RobotoRegularTextView
        android:id="@+id/preview_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/dummy_question_preview_label1"
        android:textColor="#2E2E2E"
        android:textSize="16sp" />

    <CustomClass.RobotoRegularTextView
        android:id="@+id/preview_email_answer_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:hint="@string/question_email_answer_hint"
        android:textColorHint="#7A7A7A"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="visible"/>

    <CustomClass.RobotoRegularTextView
        android:id="@+id/preview_multiple_option_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:hint="@string/question_multiple_option_hint"
        android:textColorHint="#7A7A7A"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/preview_option_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<include layout="@layout/layout_survey_polling_complete_option"/>-->
    </LinearLayout>

</LinearLayout>